sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: ';' expected but 'for' found.
    echange(i,i+1) for (i<- 0 to (getNombreVaaleurs()-2)) if ((plusPetit(i+1, i)))
                   ^AlgBubbleSort1:7: error: 'while' expected but 'for' found.
  for (i<- 0 to (getNombreValeurs()-2)) {
  ^AlgBubbleSort1:15: error: '(' expected but '}' found.
} 
^